[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Screens/PauseScene.gd" type="Script" id=1]

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
z_index = 20
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 278.0
margin_top = 138.0
margin_right = 358.0
margin_bottom = 214.0
custom_constants/separation = 8
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_right = 80.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../Skip")
text = "CONTINUE"

[node name="Skip" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 80.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../Continue")
focus_neighbour_bottom = NodePath("../Quit")
text = "SKIP"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 80.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../Skip")
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
